feat: update version

--- a/src/app/core/theme/footer/footer.component.html
+++ b/src/app/core/theme/footer/footer.component.html
@@ -1,10 +1,10 @@
 <footer class="main-footer app-footer">
   <div class="pull-right hidden-xs">
-    <b>Versão</b> 2.2.0
+    <b>Versão</b> 0.1.0
     <strong class="environment-{{environment.envName}}" *ngIf="!environment.production"> <b>Environment</b>
       {{environment.envName}}</strong>
   </div>
   <div class="text-copy">
-    <strong>Todos os direitos reservados &copy; 2019 Alpe.</strong>
+    <strong>Todos os direitos reservados &copy; 2019 AlpePay.</strong>
   </div>
 </footer>
